# urban_sprawl

./: .gitattributes  .gitignore  Building Large-Scale Isometric City Simulators.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  whitepaper.html
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/shaders/: building_instanced.wgsl  cinematic_polish.wgsl  cloud_shadows.wgsl  frustum_cull.wgsl  hzb_generate.wgsl  instancing.wgsl  rain.wgsl  tilt_shift.wgsl  water.wgsl  wet_surface.wgsl  window_instanced.wgsl
docs/: DESIGN_REVIEW.md  DEVELOPMENT_PLAN.md  VISUAL_IMPROVEMENTS.md  gfx.html  gfx_ideas.md  gpugfx_research.md  graphics.md
src/: game_state.rs  main.rs
src/audio/: mod.rs
src/camera/: mod.rs
src/procgen/: block_extractor.rs  building_factory.rs  buildings.rs  lot_engine.rs  lot_geometry.rs  mod.rs  parcels.rs  river.rs  road_generator.rs  roads.rs  streamline.rs  tensor.rs  zoning.rs
src/render/: balconies.rs  billboards.rs  bridges.rs  building_instances.rs  building_shadows.rs  building_spawner.rs  bus_stops.rs  celestial.rs  cinematic_polish.rs  cloud_shadows.rs  construction_sites.rs  crosswalks.rs  day_night.rs  elevated_rail.rs  entrance_lights.rs  facade_textures.rs  graffiti.rs  instancing.rs  landmarks.rs  mesh_pools.rs  mod.rs  nature_details.rs  neon_signs.rs  parked_cars.rs  parking_garages.rs  parking_lots.rs  road_markings.rs  road_mesh.rs  rooftop_details.rs  signage.rs  storefronts.rs  street_amenities.rs  street_details.rs  street_furniture.rs  street_lamps.rs  (+13 more)
(+37 files in other folders)
